Rearrange Lines' order

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -369,6 +369,121 @@
 	"_comment": " [CATEGORY]: MISC - NAMES",
 	
 	
+	"_comment": " [CATEGORY]: AFFIXES - NAMES",
+	
+	"mmorpg.affix.amber_amulet": "Amber Amulet",
+	"mmorpg.affix.arcane_staff": "Arcane Staff",
+	"mmorpg.affix.archeologists": "考古家的",
+	"mmorpg.affix.ass_bow": "Assassin Bow",
+	"mmorpg.affix.ass_crossbow": "Assassin Crossbow",
+	"mmorpg.affix.azure": "天蓝",
+	"mmorpg.affix.bandit_mask": "Bandit Mask",
+	"mmorpg.affix.bone_bow": "Bone Bow",
+	"mmorpg.affix.bone_crossbow": "Bone Crossbow",
+	"mmorpg.affix.bone_helm": "Bone Circlet",
+	"mmorpg.affix.boundless": "无界",
+	"mmorpg.affix.chaos_ele_dmg_jewelry": "猛毒之",
+	"mmorpg.affix.chaos_res": "蛇之",
+	"mmorpg.affix.chaos_wep_dmg": "剧毒",
+	"mmorpg.affix.cleric_staff": "Cleric Staff",
+	"mmorpg.affix.crit_prefix": "致命",
+	"mmorpg.affix.cursed_staff": "Cursed Staff",
+	"mmorpg.affix.desolation": "荒芜",
+	"mmorpg.affix.dusk_blade": "Dusk Blade",
+	"mmorpg.affix.ene_ring": "Emerald Ring",
+	"mmorpg.affix.energetic": "活力",
+	"mmorpg.affix.energy_reg": "激发",
+	"mmorpg.affix.fire_ele_dmg_jewelry": "余烬",
+	"mmorpg.affix.fire_res": "火龙之",
+	"mmorpg.affix.fire_spell_ele_dmg": "灼烧",
+	"mmorpg.affix.fire_wep_dmg": "灼烧",
+	"mmorpg.affix.focused": "专注",
+	"mmorpg.affix.glacial_staff": "Glacial Staff",
+	"mmorpg.affix.gladiator_helm": "Gladiator Helm",
+	"mmorpg.affix.glimmering": "闪烁",
+	"mmorpg.affix.golden_crown": "Golden Crown",
+	"mmorpg.affix.heal_crit_dmg_prefix": "启发",
+	"mmorpg.affix.heal_crit_prefix": "真实",
+	"mmorpg.affix.heal_suff": "恢复",
+	"mmorpg.affix.hp_ring": "Coral Ring",
+	"mmorpg.affix.hunter_hood": "Hunter Hood",
+	"mmorpg.affix.immortal": "不朽",
+	"mmorpg.affix.imperial_bow": "Imperial Bow",
+	"mmorpg.affix.imperial_crossbow": "Imperial Crossbow",
+	"mmorpg.affix.item_both_armor": "强化护甲",
+	"mmorpg.affix.item_both_dodge": "鳞片闪避",
+	"mmorpg.affix.item_both_ms": "坚固魔护",
+	"mmorpg.affix.item_flat_armor": "强化护甲",
+	"mmorpg.affix.item_flat_dodge": "鳞片闪避",
+	"mmorpg.affix.item_flat_ms": "坚固魔护",
+	"mmorpg.affix.item_perc_armor": "强化护甲",
+	"mmorpg.affix.item_perc_dodge": "鳞片闪避",
+	"mmorpg.affix.item_perc_ms": "坚固魔护",
+	"mmorpg.affix.jade_amulet": "Jade Amulet",
+	"mmorpg.affix.lapis_amulet": "Lapis Amulet",
+	"mmorpg.affix.lightning_res": "雪人的",
+	"mmorpg.affix.lightning_spell_ele_dmg": "剧毒",
+	"mmorpg.affix.lightning_staff": "Lightning Staff",
+	"mmorpg.affix.lunaris_circlet": "Lunaris Circlet",
+	"mmorpg.affix.mana_reg": "抚慰",
+	"mmorpg.affix.mana_ring": "Paua Ring",
+	"mmorpg.affix.mana_thief": "法力小偷的",
+	"mmorpg.affix.mind_cage": "Mind Cage",
+	"mmorpg.affix.ms_reg": "稳定",
+	"mmorpg.affix.ms_ring": "Moonstone Ring",
+	"mmorpg.affix.necro_helmet": "Necromancer Helm",
+	"mmorpg.affix.oakwood_staff": "Oak Wood Staff",
+	"mmorpg.affix.of_affluence": "繁荣",
+	"mmorpg.affix.of_azure_skies": "青空之",
+	"mmorpg.affix.of_brutality": "野蛮",
+	"mmorpg.affix.of_consumption": "消耗",
+	"mmorpg.affix.of_devastation": "毁灭",
+	"mmorpg.affix.of_energy": "活力",
+	"mmorpg.affix.of_fast_cast": "快速施法",
+	"mmorpg.affix.of_gluttony": "暴食",
+	"mmorpg.affix.of_less_cd": "重复",
+	"mmorpg.affix.of_mana": "魔力",
+	"mmorpg.affix.of_pene": "穿透",
+	"mmorpg.affix.of_spell_dmg": "法术伤害",
+	"mmorpg.affix.of_spirit_markings": "灵魂标记",
+	"mmorpg.affix.of_the_philosopher": "哲人的",
+	"mmorpg.affix.of_the_sky": "天空的",
+	"mmorpg.affix.of_the_titan": "泰坦的",
+	"mmorpg.affix.of_the_troll": "巨魔的",
+	"mmorpg.affix.of_the_wind": "风之",
+	"mmorpg.affix.of_treasure": "财宝",
+	"mmorpg.affix.of_vampirism": "吸血",
+	"mmorpg.affix.physical_wep_dmg": "暴君",
+	"mmorpg.affix.precise": "精准",
+	"mmorpg.affix.promised": "承诺",
+	"mmorpg.affix.royal_helm": "Royal Helm",
+	"mmorpg.affix.rusted_sword": "Rusted Sword",
+	"mmorpg.affix.scavanger": "拾荒者",
+	"mmorpg.affix.seraphim": "炽天使的",
+	"mmorpg.affix.siege_helm": "Siege Helmet",
+	"mmorpg.affix.strong_dex_armor_suf": "技巧",
+	"mmorpg.affix.strong_int_armor_suf": "天才的",
+	"mmorpg.affix.strong_str_armor_suf": "怪物的",
+	"mmorpg.affix.thicket_bow": "Thicket Bow",
+	"mmorpg.affix.thicket_crossbow": "Thicket Crossbow",
+	"mmorpg.affix.thorn_rapier": "Thorn Rapier",
+	"mmorpg.affix.true_hit": "真实命中",
+	"mmorpg.affix.twilight_blade": "Twilight Blade",
+	"mmorpg.affix.vampiric": "吸血",
+	"mmorpg.affix.vdo_mask": "Voodoo Mask",
+	"mmorpg.affix.water_ele_dmg_jewelry": "冰封",
+	"mmorpg.affix.water_res": "风暴的",
+	"mmorpg.affix.water_spell_ele_dmg": "冻结",
+	"mmorpg.affix.water_wep_dmg": "冻结",
+	"mmorpg.affix.wep_item_both": "悲惨",
+	"mmorpg.affix.wep_item_flat": "致命",
+	"mmorpg.affix.wep_item_perc": "残酷",
+	"mmorpg.affix.wildfire_staff": "Wildfire Staff",
+	"mmorpg.affix.wolf_pelt": "Wolf Pelt",
+	
+	"_comment": " [CATEGORY]: AFFIXES - NAMES",
+	
+	
 	"_comment": " [CATEGORY]: SPELLS - NAMES",
 	
 	"mmorpg.asc_class.hunter": "猎人",
@@ -542,84 +657,7 @@
 	"_comment": " [CATEGORY]: SPELLS - NAMES",
 	
 	
-	"_comment": " [CATEGORY]: AFFIXES - NAMES",
-	
-	"mmorpg.affix.archeologists": "考古家的",
-	"mmorpg.affix.azure": "天蓝",
-	"mmorpg.affix.boundless": "无界",
-	"mmorpg.affix.chaos_ele_dmg_jewelry": "猛毒之",
-	"mmorpg.affix.chaos_res": "蛇之",
-	"mmorpg.affix.chaos_wep_dmg": "剧毒",
-	"mmorpg.affix.crit_prefix": "致命",
-	"mmorpg.affix.desolation": "荒芜",
-	"mmorpg.affix.energetic": "活力",
-	"mmorpg.affix.energy_reg": "激发",
-	"mmorpg.affix.fire_ele_dmg_jewelry": "余烬",
-	"mmorpg.affix.fire_res": "火龙之",
-	"mmorpg.affix.fire_spell_ele_dmg": "灼烧",
-	"mmorpg.affix.fire_wep_dmg": "灼烧",
-	"mmorpg.affix.focused": "专注",
-	"mmorpg.affix.glimmering": "闪烁",
-	"mmorpg.affix.heal_crit_dmg_prefix": "启发",
-	"mmorpg.affix.heal_crit_prefix": "真实",
-	"mmorpg.affix.heal_suff": "恢复",
-	"mmorpg.affix.immortal": "不朽",
-	"mmorpg.affix.item_both_armor": "强化护甲",
-	"mmorpg.affix.item_both_dodge": "鳞片闪避",
-	"mmorpg.affix.item_both_ms": "坚固魔护",
-	"mmorpg.affix.item_flat_armor": "强化护甲",
-	"mmorpg.affix.item_flat_dodge": "鳞片闪避",
-	"mmorpg.affix.item_flat_ms": "坚固魔护",
-	"mmorpg.affix.item_perc_armor": "强化护甲",
-	"mmorpg.affix.item_perc_dodge": "鳞片闪避",
-	"mmorpg.affix.item_perc_ms": "坚固魔护",
-	"mmorpg.affix.lightning_res": "雪人的",
-	"mmorpg.affix.lightning_spell_ele_dmg": "剧毒",
-	"mmorpg.affix.mana_reg": "抚慰",
-	"mmorpg.affix.mana_thief": "法力小偷的",
-	"mmorpg.affix.ms_reg": "稳定",
-	"mmorpg.affix.of_affluence": "繁荣",
-	"mmorpg.affix.of_azure_skies": "青空之",
-	"mmorpg.affix.of_brutality": "野蛮",
-	"mmorpg.affix.of_consumption": "消耗",
-	"mmorpg.affix.of_devastation": "毁灭",
-	"mmorpg.affix.of_energy": "活力",
-	"mmorpg.affix.of_fast_cast": "快速施法",
-	"mmorpg.affix.of_gluttony": "暴食",
-	"mmorpg.affix.of_less_cd": "重复",
-	"mmorpg.affix.of_mana": "魔力",
-	"mmorpg.affix.of_pene": "穿透",
-	"mmorpg.affix.of_spell_dmg": "法术伤害",
-	"mmorpg.affix.of_spirit_markings": "灵魂标记",
-	"mmorpg.affix.of_the_philosopher": "哲人的",
-	"mmorpg.affix.of_the_sky": "天空的",
-	"mmorpg.affix.of_the_titan": "泰坦的",
-	"mmorpg.affix.of_the_troll": "巨魔的",
-	"mmorpg.affix.of_the_wind": "风之",
-	"mmorpg.affix.of_treasure": "财宝",
-	"mmorpg.affix.of_vampirism": "吸血",
-	"mmorpg.affix.physical_wep_dmg": "暴君",
-	"mmorpg.affix.precise": "精准",
-	"mmorpg.affix.promised": "承诺",
-	"mmorpg.affix.scavanger": "拾荒者",
-	"mmorpg.affix.seraphim": "天使的",
-	"mmorpg.affix.strong_dex_armor_suf": "技巧",
-	"mmorpg.affix.strong_int_armor_suf": "天才的",
-	"mmorpg.affix.strong_str_armor_suf": "怪物的",
-	"mmorpg.affix.true_hit": "真实命中",
-	"mmorpg.affix.vampiric": "吸血",
-	"mmorpg.affix.water_ele_dmg_jewelry": "冰封",
-	"mmorpg.affix.water_res": "风暴的",
-	"mmorpg.affix.water_spell_ele_dmg": "冻结",
-	"mmorpg.affix.water_wep_dmg": "冻结",
-	"mmorpg.affix.wep_item_both": "悲惨",
-	"mmorpg.affix.wep_item_flat": "致命",
-	"mmorpg.affix.wep_item_perc": "残酷",
-	
-	"_comment": " [CATEGORY]: AFFIXES - NAMES",
-	
-	
-	"_comment": " [CATEGORY]: TAGS - NAMES   This part is basically search-friendly type for each genre.",
+	"_comment": " [CATEGORY]: 标签/分类",
 	
 	"mmorpg.tag.effect.augment": "增强",
 	"mmorpg.tag.effect.curse": "诅咒",
@@ -638,6 +676,10 @@
 	"mmorpg.tag.gear_slot.boots": "靴子",
 	"mmorpg.tag.gear_slot.bow": "弓",
 	"mmorpg.tag.gear_slot.chest": "胸部",
+	"mmorpg.tag.gear_slot.cloth_boots": "Cloth boots",
+	"mmorpg.tag.gear_slot.cloth_chest": "Cloth chest",
+	"mmorpg.tag.gear_slot.cloth_helmet": "Cloth helmet",
+	"mmorpg.tag.gear_slot.cloth_pants": "Cloth pants",
 	"mmorpg.tag.gear_slot.crafted_jewel_unique": "人造特殊珠宝",
 	"mmorpg.tag.gear_slot.crossbow": "弩",
 	"mmorpg.tag.gear_slot.dexterity": "敏捷",
@@ -653,6 +695,10 @@
 	"mmorpg.tag.gear_slot.jewel_int": "智力珠宝",
 	"mmorpg.tag.gear_slot.jewel_str": "力量珠宝",
 	"mmorpg.tag.gear_slot.jewelry_family": "珠宝类型",
+	"mmorpg.tag.gear_slot.leather_boots": "Leather boots",
+	"mmorpg.tag.gear_slot.leather_chest": "Leather chest",
+	"mmorpg.tag.gear_slot.leather_helmet": "Leather helmet",
+	"mmorpg.tag.gear_slot.leather_pants": "Leather pants",
 	"mmorpg.tag.gear_slot.mage_weapon": "法师武器",
 	"mmorpg.tag.gear_slot.magic_shield_stat": "魔法盾属性",
 	"mmorpg.tag.gear_slot.melee_weapon": "近战武器",
@@ -660,6 +706,10 @@
 	"mmorpg.tag.gear_slot.necklace": "项链",
 	"mmorpg.tag.gear_slot.offhand_family": "副手类型",
 	"mmorpg.tag.gear_slot.pants": "裤子",
+	"mmorpg.tag.gear_slot.plate_boots": "Plate boots",
+	"mmorpg.tag.gear_slot.plate_chest": "Plate chest",
+	"mmorpg.tag.gear_slot.plate_helmet": "Plate helmet",
+	"mmorpg.tag.gear_slot.plate_pants": "Plate pants",
 	"mmorpg.tag.gear_slot.ranged_weapon": "远程武器",
 	"mmorpg.tag.gear_slot.ranger_casting_weapon": "远程施法武器",
 	"mmorpg.tag.gear_slot.ring": "戒指",
@@ -768,20 +818,61 @@
 	"mmorpg.buff_consumption.seafood": "海鲜",
 	
 	"_comment": " [CATEGORY]: FOODS - NAMES",
-
-
-	"_comment": " [CATEGORY]: RARITIES - NAMES",
 	
-	"mmorpg.rarity.gear.common": "普通",
-	"mmorpg.rarity.gear.epic": "史诗",
-	"mmorpg.rarity.gear.legendary": "传奇",
-	"mmorpg.rarity.gear.mythic": "神话",
-	"mmorpg.rarity.gear.rare": "稀有",
-	"mmorpg.rarity.gear.runeword": "符文之语",
-	"mmorpg.rarity.gear.uncommon": "非凡",
-	"mmorpg.rarity.gear.unique": "独特",
 	
 	"_comment": " [CATEGORY]: RARITIES - NAMES",
+	
+	"mmorpg.mob_rarity.common": "普通级",
+	"mmorpg.mob_rarity.epic": "史诗级",
+	"mmorpg.mob_rarity.legendary": "传说级",
+	"mmorpg.mob_rarity.mythic": "神话级",
+	"mmorpg.mob_rarity.rare": "稀有级",
+	"mmorpg.mob_rarity.summon": "召唤物",
+	"mmorpg.mob_rarity.uncommon": "精良级",
+	"mmorpg.rarity..common": "普通级",
+	"mmorpg.rarity..epic": "史诗级",
+	"mmorpg.rarity..legendary": "传说级",
+	"mmorpg.rarity..mythic": "神话级",
+	"mmorpg.rarity..rare": "稀有级",
+	"mmorpg.rarity..runeword": "符文之语",
+	"mmorpg.rarity..uncommon": "精良级",
+	"mmorpg.rarity..unique": "独特级",
+	
+	"_comment": " [CATEGORY]: RARITIES - NAMES",
+	
+	
+	"_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
+	
+	"mmorpg.ailment.bleed": "流血",
+	"mmorpg.ailment.burn": "灼烧",
+	"mmorpg.ailment.electrify": "感电",
+	"mmorpg.ailment.freeze": "冰冻",
+	"mmorpg.ailment.poison": "中毒",
+	"mmorpg.effect.agony": "Curse of Agony",
+	"mmorpg.effect.blind": "Blind",
+	"mmorpg.effect.bone_chill": "Bone Chill",
+	"mmorpg.effect.charm": "Charm",
+	"mmorpg.effect.despair": "Curse of Despair",
+	"mmorpg.effect.draconic_blood": "Dragon Blood",
+	"mmorpg.effect.ground": "Grounding",
+	"mmorpg.effect.inner_calm": "Inner Calm",
+	"mmorpg.effect.mage_circle": "Mage Circle",
+	"mmorpg.effect.perseverance": "Perseverance",
+	"mmorpg.effect.petrify": "Petrify",
+	"mmorpg.effect.rejuvenation": "Rejuvenation",
+	"mmorpg.effect.shred": "Shred",
+	"mmorpg.effect.slow": "Slow",
+	"mmorpg.effect.stun": "Stun",
+	"mmorpg.effect.taunt_stance": "Taunt Stance",
+	"mmorpg.effect.thorn": "Thorn",
+	"mmorpg.effect.undying_will": "Undying Will",
+	"mmorpg.effect.valor": "Valor",
+	"mmorpg.effect.vamp_blood": "Vamp Blood",
+	"mmorpg.effect.vigor": "Vigor",
+	"mmorpg.effect.weak": "Curse of Weakness",
+	"mmorpg.effect.wounds": "Wounds",
+	
+	"_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 	
 	
 	"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
@@ -796,39 +887,6 @@
 	"item.mmorpg.currency.unique_reroll": "精华源质",
 	
 	"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-	
-	
-	"_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
-	
-	"effect.mmorpg.beneficial.10": "活力",
-	"effect.mmorpg.beneficial.11": "不死意志",
-	"effect.mmorpg.beneficial.12": "法阵",
-	"effect.mmorpg.beneficial.3": "吸血鬼之血",
-	"effect.mmorpg.beneficial.4": "龙血",
-	"effect.mmorpg.beneficial.5": "自然馈赠",
-	"effect.mmorpg.beneficial.8": "勇气",
-	"effect.mmorpg.beneficial.9": "坚定",
-	"effect.mmorpg.negative.0": "元素虚弱",
-	"effect.mmorpg.negative.1": "石化",
-	"effect.mmorpg.negative.10": "魅惑",
-	"effect.mmorpg.negative.11": "接地",
-	"effect.mmorpg.negative.12": "死亡印记",
-	"effect.mmorpg.negative.13": "撕裂",
-	"effect.mmorpg.negative.2": "伤口",
-	"effect.mmorpg.negative.3": "折磨",
-	"effect.mmorpg.negative.4": "致盲",
-	"effect.mmorpg.negative.5": "眩晕",
-	"effect.mmorpg.negative.6": "减速",
-	"effect.mmorpg.negative.7": "痛苦诅咒",
-	"effect.mmorpg.negative.8": "衰竭诅咒",
-	"effect.mmorpg.negative.9": "绝望诅咒",
-	"mmorpg.ailment.bleed": "流血",
-	"mmorpg.ailment.burn": "灼烧",
-	"mmorpg.ailment.electrify": "感电",
-	"mmorpg.ailment.freeze": "冰冻",
-	"mmorpg.ailment.poison": "中毒",
-	
-	"_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 	
 	
 	"_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -1597,6 +1655,24 @@
 	"mmorpg.stat.weapon_damage": "武器伤害",
 	
 	"_comment": " [CATEGORY]: STATS - NAMES",
+	
+	
+	"_comment": " [CATEGORY]: FORMATTER - NAMES",
+	
+	"mmorpg.formatter.buff_comsuptions_name": "%1$s %2$s %3$s",
+	"mmorpg.formatter.gear_item_name_all": "%1$s %2$s %3$s",
+	"mmorpg.formatter.gear_item_name_another": "%1$s %2$s %3$s",
+	"mmorpg.formatter.gear_item_name_only_gear": "%1$s",
+	"mmorpg.formatter.gear_item_name_pre_gear": "%1$s %2$s",
+	"mmorpg.formatter.gem_chest_name": "%1$s %2$s %3$s %4$s",
+	"mmorpg.formatter.gem_item_name": "%1$s %2$s",
+	"mmorpg.formatter.icon_and_damage_in_spell_damage_proportion": "%1$s %2$s",
+	"mmorpg.formatter.normal_calc_stat": "%1$s",
+	"mmorpg.formatter.second_special_calc_stat": "%1$s %2$s",
+	"mmorpg.formatter.special_calc_stat": "%1$s %2$s",
+	"mmorpg.formatter.special_unique_process": "%1$s %2$s",
+	
+	"_comment": " [CATEGORY]: FORMATTER - NAMES",
 	
 	
 	"_comment": " [CATEGORY]: GEAR SLOTS - NAMES",
