progress to effect

--- a/src/main/resources/assets/mmorpg/lang/zh_cn.json
+++ b/src/main/resources/assets/mmorpg/lang/zh_cn.json
@@ -371,26 +371,26 @@
 	
 	"_comment": " [CATEGORY]: AFFIXES - NAMES",
 	
-	"mmorpg.affix.amber_amulet": "Amber Amulet",
-	"mmorpg.affix.arcane_staff": "Arcane Staff",
+	"mmorpg.affix.amber_amulet": "琥珀护符",
+	"mmorpg.affix.arcane_staff": "奥术法杖",
 	"mmorpg.affix.archeologists": "考古家的",
-	"mmorpg.affix.ass_bow": "Assassin Bow",
-	"mmorpg.affix.ass_crossbow": "Assassin Crossbow",
+	"mmorpg.affix.ass_bow": "刺客之弓",
+	"mmorpg.affix.ass_crossbow": "刺客之弩",
 	"mmorpg.affix.azure": "天蓝",
-	"mmorpg.affix.bandit_mask": "Bandit Mask",
-	"mmorpg.affix.bone_bow": "Bone Bow",
-	"mmorpg.affix.bone_crossbow": "Bone Crossbow",
-	"mmorpg.affix.bone_helm": "Bone Circlet",
+	"mmorpg.affix.bandit_mask": "强盗面具",
+	"mmorpg.affix.bone_bow": "白骨弓",
+	"mmorpg.affix.bone_crossbow": "白骨弩",
+	"mmorpg.affix.bone_helm": "白骨圆环",
 	"mmorpg.affix.boundless": "无界",
 	"mmorpg.affix.chaos_ele_dmg_jewelry": "猛毒之",
 	"mmorpg.affix.chaos_res": "蛇之",
 	"mmorpg.affix.chaos_wep_dmg": "剧毒",
-	"mmorpg.affix.cleric_staff": "Cleric Staff",
+	"mmorpg.affix.cleric_staff": "牧师法杖",
 	"mmorpg.affix.crit_prefix": "致命",
-	"mmorpg.affix.cursed_staff": "Cursed Staff",
+	"mmorpg.affix.cursed_staff": "诅咒法杖",
 	"mmorpg.affix.desolation": "荒芜",
-	"mmorpg.affix.dusk_blade": "Dusk Blade",
-	"mmorpg.affix.ene_ring": "Emerald Ring",
+	"mmorpg.affix.dusk_blade": "黄昏之刃",
+	"mmorpg.affix.ene_ring": "翡翠戒指",
 	"mmorpg.affix.energetic": "活力",
 	"mmorpg.affix.energy_reg": "激发",
 	"mmorpg.affix.fire_ele_dmg_jewelry": "余烬",
@@ -398,18 +398,18 @@
 	"mmorpg.affix.fire_spell_ele_dmg": "灼烧",
 	"mmorpg.affix.fire_wep_dmg": "灼烧",
 	"mmorpg.affix.focused": "专注",
-	"mmorpg.affix.glacial_staff": "Glacial Staff",
-	"mmorpg.affix.gladiator_helm": "Gladiator Helm",
+	"mmorpg.affix.glacial_staff": "冰川法杖",
+	"mmorpg.affix.gladiator_helm": "斗士头盔",
 	"mmorpg.affix.glimmering": "闪烁",
-	"mmorpg.affix.golden_crown": "Golden Crown",
+	"mmorpg.affix.golden_crown": "黄金王冠",
 	"mmorpg.affix.heal_crit_dmg_prefix": "启发",
 	"mmorpg.affix.heal_crit_prefix": "真实",
 	"mmorpg.affix.heal_suff": "恢复",
-	"mmorpg.affix.hp_ring": "Coral Ring",
-	"mmorpg.affix.hunter_hood": "Hunter Hood",
+	"mmorpg.affix.hp_ring": "珊瑚戒指",
+	"mmorpg.affix.hunter_hood": "猎人头巾",
 	"mmorpg.affix.immortal": "不朽",
-	"mmorpg.affix.imperial_bow": "Imperial Bow",
-	"mmorpg.affix.imperial_crossbow": "Imperial Crossbow",
+	"mmorpg.affix.imperial_bow": "帝国之弓",
+	"mmorpg.affix.imperial_crossbow": "帝国之弩",
 	"mmorpg.affix.item_both_armor": "强化护甲",
 	"mmorpg.affix.item_both_dodge": "鳞片闪避",
 	"mmorpg.affix.item_both_ms": "坚固魔护",
@@ -419,20 +419,20 @@
 	"mmorpg.affix.item_perc_armor": "强化护甲",
 	"mmorpg.affix.item_perc_dodge": "鳞片闪避",
 	"mmorpg.affix.item_perc_ms": "坚固魔护",
-	"mmorpg.affix.jade_amulet": "Jade Amulet",
-	"mmorpg.affix.lapis_amulet": "Lapis Amulet",
+	"mmorpg.affix.jade_amulet": "玉石护符",
+	"mmorpg.affix.lapis_amulet": "青金石护符",
 	"mmorpg.affix.lightning_res": "雪人的",
 	"mmorpg.affix.lightning_spell_ele_dmg": "剧毒",
-	"mmorpg.affix.lightning_staff": "Lightning Staff",
-	"mmorpg.affix.lunaris_circlet": "Lunaris Circlet",
+	"mmorpg.affix.lightning_staff": "闪电法杖",
+	"mmorpg.affix.lunaris_circlet": "月神圆环",
 	"mmorpg.affix.mana_reg": "抚慰",
-	"mmorpg.affix.mana_ring": "Paua Ring",
-	"mmorpg.affix.mana_thief": "法力小偷的",
-	"mmorpg.affix.mind_cage": "Mind Cage",
+	"mmorpg.affix.mana_ring": "帕瓦戒指",
+	"mmorpg.affix.mana_thief": "法力窃取",
+	"mmorpg.affix.mind_cage": "心灵牢笼",
 	"mmorpg.affix.ms_reg": "稳定",
-	"mmorpg.affix.ms_ring": "Moonstone Ring",
-	"mmorpg.affix.necro_helmet": "Necromancer Helm",
-	"mmorpg.affix.oakwood_staff": "Oak Wood Staff",
+	"mmorpg.affix.ms_ring": "月石戒指",
+	"mmorpg.affix.necro_helmet": "死灵法师头盔",
+	"mmorpg.affix.oakwood_staff": "橡木法杖",
 	"mmorpg.affix.of_affluence": "繁荣",
 	"mmorpg.affix.of_azure_skies": "青空之",
 	"mmorpg.affix.of_brutality": "野蛮",
@@ -456,21 +456,21 @@
 	"mmorpg.affix.physical_wep_dmg": "暴君",
 	"mmorpg.affix.precise": "精准",
 	"mmorpg.affix.promised": "承诺",
-	"mmorpg.affix.royal_helm": "Royal Helm",
-	"mmorpg.affix.rusted_sword": "Rusted Sword",
+	"mmorpg.affix.royal_helm": "皇家头盔",
+	"mmorpg.affix.rusted_sword": "生锈的剑",
 	"mmorpg.affix.scavanger": "拾荒者",
 	"mmorpg.affix.seraphim": "炽天使的",
-	"mmorpg.affix.siege_helm": "Siege Helmet",
+	"mmorpg.affix.siege_helm": "攻城头盔",
 	"mmorpg.affix.strong_dex_armor_suf": "技巧",
 	"mmorpg.affix.strong_int_armor_suf": "天才的",
 	"mmorpg.affix.strong_str_armor_suf": "怪物的",
-	"mmorpg.affix.thicket_bow": "Thicket Bow",
-	"mmorpg.affix.thicket_crossbow": "Thicket Crossbow",
-	"mmorpg.affix.thorn_rapier": "Thorn Rapier",
+	"mmorpg.affix.thicket_bow": "厚木弓",
+	"mmorpg.affix.thicket_crossbow": "厚木弩",
+	"mmorpg.affix.thorn_rapier": "荆棘长剑",
 	"mmorpg.affix.true_hit": "真实命中",
-	"mmorpg.affix.twilight_blade": "Twilight Blade",
+	"mmorpg.affix.twilight_blade": "暮光之刃",
 	"mmorpg.affix.vampiric": "吸血",
-	"mmorpg.affix.vdo_mask": "Voodoo Mask",
+	"mmorpg.affix.vdo_mask": "巫毒面具",
 	"mmorpg.affix.water_ele_dmg_jewelry": "冰封",
 	"mmorpg.affix.water_res": "风暴的",
 	"mmorpg.affix.water_spell_ele_dmg": "冻结",
@@ -478,8 +478,8 @@
 	"mmorpg.affix.wep_item_both": "悲惨",
 	"mmorpg.affix.wep_item_flat": "致命",
 	"mmorpg.affix.wep_item_perc": "残酷",
-	"mmorpg.affix.wildfire_staff": "Wildfire Staff",
-	"mmorpg.affix.wolf_pelt": "Wolf Pelt",
+	"mmorpg.affix.wildfire_staff": "野火法杖",
+	"mmorpg.affix.wolf_pelt": "狼皮",
 	
 	"_comment": " [CATEGORY]: AFFIXES - NAMES",
 	
@@ -676,10 +676,10 @@
 	"mmorpg.tag.gear_slot.boots": "靴子",
 	"mmorpg.tag.gear_slot.bow": "弓",
 	"mmorpg.tag.gear_slot.chest": "胸部",
-	"mmorpg.tag.gear_slot.cloth_boots": "Cloth boots",
-	"mmorpg.tag.gear_slot.cloth_chest": "Cloth chest",
-	"mmorpg.tag.gear_slot.cloth_helmet": "Cloth helmet",
-	"mmorpg.tag.gear_slot.cloth_pants": "Cloth pants",
+	"mmorpg.tag.gear_slot.cloth_boots": "布制靴子",
+	"mmorpg.tag.gear_slot.cloth_chest": "布制胸甲",
+	"mmorpg.tag.gear_slot.cloth_helmet": "布制头盔",
+	"mmorpg.tag.gear_slot.cloth_pants": "布制裤子",
 	"mmorpg.tag.gear_slot.crafted_jewel_unique": "人造特殊珠宝",
 	"mmorpg.tag.gear_slot.crossbow": "弩",
 	"mmorpg.tag.gear_slot.dexterity": "敏捷",
@@ -695,10 +695,10 @@
 	"mmorpg.tag.gear_slot.jewel_int": "智力珠宝",
 	"mmorpg.tag.gear_slot.jewel_str": "力量珠宝",
 	"mmorpg.tag.gear_slot.jewelry_family": "珠宝类型",
-	"mmorpg.tag.gear_slot.leather_boots": "Leather boots",
-	"mmorpg.tag.gear_slot.leather_chest": "Leather chest",
-	"mmorpg.tag.gear_slot.leather_helmet": "Leather helmet",
-	"mmorpg.tag.gear_slot.leather_pants": "Leather pants",
+	"mmorpg.tag.gear_slot.leather_boots": "皮革靴子",
+	"mmorpg.tag.gear_slot.leather_chest": "皮革胸甲",
+	"mmorpg.tag.gear_slot.leather_helmet": "皮革头盔",
+	"mmorpg.tag.gear_slot.leather_pants": "皮革裤子",
 	"mmorpg.tag.gear_slot.mage_weapon": "法师武器",
 	"mmorpg.tag.gear_slot.magic_shield_stat": "魔法盾属性",
 	"mmorpg.tag.gear_slot.melee_weapon": "近战武器",
@@ -706,10 +706,10 @@
 	"mmorpg.tag.gear_slot.necklace": "项链",
 	"mmorpg.tag.gear_slot.offhand_family": "副手类型",
 	"mmorpg.tag.gear_slot.pants": "裤子",
-	"mmorpg.tag.gear_slot.plate_boots": "Plate boots",
-	"mmorpg.tag.gear_slot.plate_chest": "Plate chest",
-	"mmorpg.tag.gear_slot.plate_helmet": "Plate helmet",
-	"mmorpg.tag.gear_slot.plate_pants": "Plate pants",
+	"mmorpg.tag.gear_slot.plate_boots": "板甲靴子",
+	"mmorpg.tag.gear_slot.plate_chest": "板甲胸甲",
+	"mmorpg.tag.gear_slot.plate_helmet": "板甲头盔",
+	"mmorpg.tag.gear_slot.plate_pants": "板甲裤子",
 	"mmorpg.tag.gear_slot.ranged_weapon": "远程武器",
 	"mmorpg.tag.gear_slot.ranger_casting_weapon": "远程施法武器",
 	"mmorpg.tag.gear_slot.ring": "戒指",
@@ -841,36 +841,36 @@
 	"_comment": " [CATEGORY]: RARITIES - NAMES",
 	
 	
-	"_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
+	"_comment": " [CATEGORY]: STATUSEFFECTS - NAMES Charm的翻译还需要看到实例",
 	
 	"mmorpg.ailment.bleed": "流血",
 	"mmorpg.ailment.burn": "灼烧",
 	"mmorpg.ailment.electrify": "感电",
 	"mmorpg.ailment.freeze": "冰冻",
 	"mmorpg.ailment.poison": "中毒",
-	"mmorpg.effect.agony": "Curse of Agony",
-	"mmorpg.effect.blind": "Blind",
-	"mmorpg.effect.bone_chill": "Bone Chill",
-	"mmorpg.effect.charm": "Charm",
-	"mmorpg.effect.despair": "Curse of Despair",
-	"mmorpg.effect.draconic_blood": "Dragon Blood",
-	"mmorpg.effect.ground": "Grounding",
-	"mmorpg.effect.inner_calm": "Inner Calm",
-	"mmorpg.effect.mage_circle": "Mage Circle",
-	"mmorpg.effect.perseverance": "Perseverance",
-	"mmorpg.effect.petrify": "Petrify",
-	"mmorpg.effect.rejuvenation": "Rejuvenation",
-	"mmorpg.effect.shred": "Shred",
-	"mmorpg.effect.slow": "Slow",
-	"mmorpg.effect.stun": "Stun",
-	"mmorpg.effect.taunt_stance": "Taunt Stance",
-	"mmorpg.effect.thorn": "Thorn",
-	"mmorpg.effect.undying_will": "Undying Will",
-	"mmorpg.effect.valor": "Valor",
-	"mmorpg.effect.vamp_blood": "Vamp Blood",
-	"mmorpg.effect.vigor": "Vigor",
-	"mmorpg.effect.weak": "Curse of Weakness",
-	"mmorpg.effect.wounds": "Wounds",
+	"mmorpg.effect.agony": "痛苦诅咒",
+	"mmorpg.effect.blind": "失明",
+	"mmorpg.effect.bone_chill": "冰寒刺骨",
+	"mmorpg.effect.charm": "护身符",
+	"mmorpg.effect.despair": "绝望诅咒",
+	"mmorpg.effect.draconic_blood": "龙血",
+	"mmorpg.effect.ground": "禁足",
+	"mmorpg.effect.inner_calm": "内心平静",
+	"mmorpg.effect.mage_circle": "法师之环",
+	"mmorpg.effect.perseverance": "坚定赞歌",
+	"mmorpg.effect.petrify": "石化",
+	"mmorpg.effect.rejuvenation": "回春",
+	"mmorpg.effect.shred": "撕裂",
+	"mmorpg.effect.slow": "缓慢",
+	"mmorpg.effect.stun": "眩晕",
+	"mmorpg.effect.taunt_stance": "嘲讽姿态",
+	"mmorpg.effect.thorn": "荆棘",
+	"mmorpg.effect.undying_will": "不死意志",
+	"mmorpg.effect.valor": "勇气",
+	"mmorpg.effect.vamp_blood": "吸血鬼之血",
+	"mmorpg.effect.vigor": "活力",
+	"mmorpg.effect.weak": "虚弱诅咒",
+	"mmorpg.effect.wounds": "伤口",
 	
 	"_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
 	
