--- a/src/main/resources/assets/mmorpg/lang/ko_kr.json
+++ b/src/main/resources/assets/mmorpg/lang/ko_kr.json
@@ -2138,7 +2138,7 @@
  "spell.desc.explosive_arrow": "화살을 발사하여 적중 시 범위 내에 [calc:explosive_arrow] §c☀ 화염§7 피해를 줍니다.",
  "spell.desc.fire_nova": "주변을 화염에 휩싸이게 하여 [calc:fire_nova] §c☀ 화염§7 피해를 주위 적에게 줍니다.",
  "spell.desc.fire_trap": "지면에 남아 있다가 적이 접근하면 활성화되는 함정을 던져 [calc:ranger_trap]§c☀ 화염§7 피해를 주변 지역에 입힙니다.",
- "spell.desc.fireball": "화염구를 던져 [calc:iceball] §c☀ 화염§7 피해를 줍니다.",
+ "spell.desc.fireball": "화염구를 던져 [calc:fireball] §c☀ 화염§7 피해를 줍니다.",
  "spell.desc.flame_strike": "전방의 적을 공격하여 [calc:flame_strike] §c☀ 화염§7 피해를 입힙니다.",
  "spell.desc.frost_flower": "매초마다 [calc:flower_flower] §b☀냉기§7 피해를 입히는 서리 토템을 소환합니다.",
  "spell.desc.frost_nova": "서리 폭풍을 소환하여 주변에 [calc:frost_nova] §b☀냉기§7피해를 입힙니다.",
@@ -2151,7 +2151,7 @@
  "spell.desc.healing_aura": "주위 아군의 [calc:healing_aura] 생명력을 회복합니다.",
  "spell.desc.heart_of_ice": "주위 아군의 [calc:heart_of_ice] 생명력을 회복합니다.",
  "spell.desc.hunter_potion": "물약을 마시면 [calc:hunter_pot_heal] 생명력이 회복됩니다.",
- "spell.desc.ice_comet": "하늘에서 떨어지는 얼음 메테오를 소환하여, [calc:meteor] §c☀ 냉기§7 피해를 입힙니다.",
+ "spell.desc.ice_comet": "하늘에서 떨어지는 얼음 메테오를 소환하여, [calc:ice_comet] §c☀ 냉기§7 피해를 입힙니다.",
  "spell.desc.lightning_nova": "주위 적에게 [calc:lightning_nova] §e☀ 번개§7 피해를 입힙니다.",
  "spell.desc.lightning_spear": "번개 송곳을 던져 [calc:lightning_spear] §e☀ 번개§7 피해를 줍니다.",
  "spell.desc.lightning_totem": "매 초마다 [calc:lightning_totem] §e☀번개§7피해를 입히는 번개 토템을 소환합니다.",
